[package]
name = "plays"
version = "0.1.0"
authors = ["Daniel Stiner <daniel.stiner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conv = "0.3.3"
enigo = "0.0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.6.0"
slog-async = "2.6.0"
slog-term = "2.6.0"
tungstenite = "0.12.0"
